create-new-user/tenants/admin2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: admin2
  labels:
    pod-security.kubernetes.io/enforce: restricted
    tenant: "admin2"
