create-new-user/tenants/admin2/networkpolicy-allow-same-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: admin2
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tenant: "admin2"
      podSelector: {}
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          tenant: "admin2"
      podSelector: {}
  policyTypes:
  - Ingress
  - Egress
