create-new-user/tenants/admin2/networkpolicy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress-egress
  namespace: admin2
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
